# hjblog-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
configuration/: Base.toml  Local.toml  Production.toml  Test.toml
migrations/: 20250117143302_tables.sql
scripts/: build_image.sh  clean.sh  global_init.sh  init_bridge.sh  init_db.sh  run_container.sh
src/: auxiliaries.rs  domain.rs  lib.rs  main.rs  routes.rs  session_state.rs  settings.rs  startup.rs  telemetry.rs
src/domain/: city.rs  email.rs  password.rs  username.rs
src/routes/: auth.rs  auxiliaries.rs  errors.rs  health_check.rs  home.rs  index.rs  user_actions.rs  user_management.rs
src/routes/auth/: auxiliaries.rs  get_login.rs  get_register.rs  logout.rs  post_login.rs  post_register.rs  scope.rs
src/routes/auth/login/: get.rs  post.rs
src/routes/auth/register/: get.rs  post.rs
src/routes/home/: auxiliaries.rs  blog.rs  index.rs
src/routes/user_actions/: all_comments.rs  scope.rs  visit_post.rs
src/routes/user_actions/comment/: get.rs  post.rs
src/routes/user_actions/new_post/: get.rs  post.rs
src/routes/user_management/: auxiliaries.rs  manage_profile.rs  scope.rs
src/routes/user_management/change_email/: get.rs  post.rs
src/routes/user_management/change_password/: get.rs  post.rs
src/routes/user_management/change_username/: get.rs  post.rs
src/routes/user_management/delete_account/: get.rs  post.rs
static/css/: style.css
static/scripts/: script.js
templates/: base.html  base_layout.html  base_protected.html  change_email.html  change_password.html  delete_account.html  error.html  index.html  login.html  manage_profile.html  register.html
templates/home/: blog.html  index.html
templates/includes/: modal_delete_comment.html  modal_delete_post.html
templates/profile/: change_username.html  manage_profile.html
templates/user_actions/: all_comments.html  comment_post.html  new_post.html  visit_post.html
tests/server/: all_comments.rs  auxiliaries.rs  blog.rs  change_email.rs  change_password.rs  change_username.rs  comment_post.rs  delete_account.rs  errors.rs  health_check.rs  index.rs  login.rs  logout.rs  main.rs  manage_profile.rs  new_post.rs  register.rs  visit_post.rs
