[package]
name = "hj_blog_rs"
version = "0.1.0"
edition = "2021"
authors = ["hjrgrn <187955624+hjrgrn@users.noreply.github.com>"]
description = "A blog website written for practing Rust and Actix-web"
readme = "README.md"
repository = "https://github.com/hjrgrn/hjblog-rs"
default-run = "hjblog"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/main.rs"
name = "hjblog"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
actix-web = "4.9.0"
actix-files = "0.6.6"
serde = { version = "1.0.217", features = ["derive"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
config = "0.14.0"
anyhow = "1.0.95"
serde-aux = "4.5.0"
uuid = { version = "1.12.0", features = ["v4"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
rand = { version = "0.8.5", features = ["std_rng"] }
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
validator = "0.20.0"
argon2 = { version = "0.5.3", features = ["std"]}
crossterm = "0.28.1"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12.12"
default-features = false
# json flag needed to serialize/deserialize JSON payloads
features = [
    "json",
    "rustls-tls",
    "cookies"
]

[dev-dependencies]
once_cell = "1.20.2"
tokio-util = { version = "0.7.13", features = ["full"] }
